styles/css/app.css
/* ... */
@media (min-width: 1280px) and (max-width: 1920px) {
  .carousel {
    display: flex;
  }
}
@media (min-width: 769px) and (max-width: 1920px) {
  .carousel {
    height: calc(83vh);
  }
}

.carousel-btn-container {
  justify-content: center;
  display: flex;
}
@media (min-width: 769px) and (max-width: 1920px) {
  .carousel-btn-container {
    margin-top: -17vh;
  }
}
@media (min-width: 1280px) and (max-width: 1920px) {
  .carousel-btn-container {
    justify-content: center;
    flex-direction: column;
  }
}

.carousel-btn {
  font-family: "Montserrat", sans-serif;
  text-decoration: none;
  font-size: 35px;
  font-weight: 800;
}
@media (min-width: 1280px) and (max-width: 1920px) {
  .carousel-btn {
    font-size: 58px;
  }
  .carousel-btn svg {
    fill: #101010;
    stroke: #8c8c8c;
    stroke-width: 1px;
  }
}

.carousel-prev {
  margin-left: 0rem;
}
@media (min-width: 768px) and (max-width: 1920px) {
  .carousel-prev {
    margin-left: 3.5rem;
  }
}

.carousel-next {
  margin-right: 0rem;
}
@media (min-width: 768px) and (max-width: 1920px) {
  .carousel-next {
    margin-right: 3.5rem;
  }
}

@supports (-webkit-text-stroke: 1px #8c8c8c) {
  .carousel-btn {
    -webkit-text-stroke: 1px #8c8c8c;
    -webkit-text-fill-color: #101010;
  }
}
.carousel-projects {
  margin: 1rem auto;
}
@media (min-width: 360px) and (max-width: 374px) {
  .carousel-projects {
    margin: 0.5rem auto;
  }
}
@media (min-width: 1280px) and (max-width: 1920px) {
  .carousel-projects {
    width: 70%;
    margin: 1rem auto;
  }
}

.carousel-cell {
  display: flex;
  justify-content: center;
  width: 100%;
  height: 68vh;
  position: relative;
}
@media (min-width: 361px) and (max-width: 414px) {
  .carousel-cell {
    width: 375px;
    height: 68vh;
  }
}
@media (min-width: 415px) and (max-width: 1280px) {
  .carousel-cell {
    width: 100%;
    height: 75vh;
  }
}
@media (min-width: 1280px) and (max-width: 1920px) {
  .carousel-cell {
    width: 100%;
  }
}
.carousel-cell img {
  z-index: 10;
  position: relative;
  height: 100%;
  width: 100%;
  object-fit: cover;
}
@media (min-width: 768px) and (max-width: 1920px) {
  .carousel-cell img {
    width: 85%;
  }
}
.carousel-cell h3 {
  z-index: 20;
  position: absolute;
  display: flex;
  justify-content: center;
  align-content: center;
  text-align: center;
  align-items: center;
  text-transform: uppercase;
  font-size: calc(20px + 2.1vw);
}
@media (min-width: 360px) and (max-width: 768px) {
  .carousel-cell h3 {
    width: 100%;
    height: 100%;
  }
}
@media (min-width: 1280px) and (max-width: 1920px) {
  .carousel-cell h3 {
    right: 0;
    bottom: 4rem;
  }
}

.uses-section a {
  border-bottom: 1px solid #f65252;
}

.uses-hero-container {
  position: absolute;
  top: 20vh;
  left: 0;
  right: 0;
}
@media (min-width: 1280px) {
  .uses-hero-container {
    top: 16vh;
    display: flex;
    justify-content: center;
    height: calc(100vh - 30vh);
  }
}

.uses-hero-header {
  font-size: calc(25px + 4vw);
  line-height: 1.3;
}
@media (max-width: 768px) {
  .uses-hero-header {
    text-align: center;
    margin-bottom: 2rem;
  }
}
@media (min-width: 1280px) {
  .uses-hero-header {
    display: flex;
    justify-content: center;
    flex-direction: column;
    flex: 1;
  }
}
.uses-hero-header span {
  display: block;
}

.uses-question-marks-container {
  text-align: center;
}
@media (max-width: 768px) {
  .uses-question-marks-container {
    margin-bottom: 6rem;
  }
}
@media (min-width: 1280px) {
  .uses-question-marks-container {
    display: flex;
    flex: 1;
    flex-flow: row-reverse;
    align-items: center;
  }
}
@media (min-width: 1280px) {
  .uses-question-marks-container img {
    height: 25rem;
  }
}

.uses-list {
  list-style-type: square;
}
.uses-list li {
  text-align: left;
  margin: 0 2rem;
  font-size: calc(12px + 1vw);
  line-height: 1.7;
}
@media (min-width: 361px) and (max-width: 414px) {
  .uses-list li {
    margin: 0 2rem;
  }
}
@media (min-width: 1280px) {
  .uses-list li {
    margin: 0 8rem;
    max-width: 1920px;
    font-size: 1.3rem;
  }
}

/*==ABOUT-HERO==*/
.about-hero-wrapper {
  position: absolute;
  right: 1.5rem;
}
@media (min-width: 414px) {
  .about-hero-wrapper {
    position: relative;
    display: flex;
    right: -1rem;
  }
}

.about-hero-container {
  position: absolute;
  top: 20vh;
  left: 0;
  right: 0;
  display: flex;
  justify-content: center;
}
@media (min-width: 1280px) {
  .about-hero-container {
    top: 16vh;
  }
}

.about-hero-circle {
  height: calc(16rem + 10vw);
  width: calc(16rem + 10vw);
  border: 1px solid #8c8c8c;
  border-radius: 50%;
  display: flex;
}
@media (min-width: 414px) {
  .about-hero-circle {
    height: calc(16rem + 17vw);
    width: calc(16rem + 17vw);
  }
}
@media (min-width: 768px) {
  .about-hero-circle {
    height: calc(16rem + 20vw);
    width: calc(16rem + 20vw);
  }
}

.about-hero-header-wrapper {
  position: relative;
  top: 9vh;
  left: -1.5rem;
}
@media (min-width: 375px) {
  .about-hero-header-wrapper {
    left: -2.3rem;
  }
}
@media (min-width: 1280px) {
  .about-hero-header-wrapper {
    left: calc(-4rem + -15vw);
    top: 16vh;
  }
}

.about-hero-header-container {
  background-color: #101010;
  font-family: "Montserrat", sans-serif;
  border-top: 0.8rem solid #101010;
  border-bottom: 0.8rem solid #101010;
  border-top-right-radius: 18%;
}
.about-hero-header-container h2 {
  font-size: calc(22px + 4vw);
  margin-bottom: 0.6rem;
}
@media (min-width: 414px) {
  .about-hero-header-container h2 {
    font-size: calc(21px + 4vw);
  }
}
@media (min-width: 1280px) {
  .about-hero-header-container h2 {
    width: 110%;
  }
}
@media (min-width: 1920px) {
  .about-hero-header-container h2 {
    width: 130%;
  }
}
.about-hero-header-container p {
  font-size: calc(13px + 2vw);
  font-weight: 700;
  margin-bottom: 0.6rem;
}
@media (min-width: 1280px) {
  .about-hero-header-container p {
    width: 130%;
  }
}
/* ... */

